--- a/index.html
+++ b/index.html
@@ -2,179 +2,128 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>For You ❤️</title>
+<title>For You 💖</title>
 
 <style>
-body{
-    margin:0;
-    height:100vh;
-    background: linear-gradient(135deg,#ff9a9e,#fad0c4);
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    font-family: 'Segoe UI', sans-serif;
-    overflow:hidden;
+body {
+  margin: 0;
+  height: 100vh;
+  background: linear-gradient(to bottom, #ffdde1, #ee9ca7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+/* Envelope */
+.envelope {
+  width: 220px;
+  height: 140px;
+  background: #fff;
+  position: relative;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+}
+
+.envelope::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 110px solid transparent;
+  border-right: 110px solid transparent;
+  border-top: 70px solid #ff9aa2;
+}
+
+.message {
+  position: absolute;
+  top: 150%;
+  width: 300px;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  display: none;
+}
+
+.rose {
+  font-size: 40px;
 }
 
 /* Falling hearts */
-.heart{
-    position:fixed;
-    top:-10px;
-    color:#ff3366;
-    font-size:16px;
-    animation: fall linear forwards;
-}
-
-@keyframes fall{
-    to{
-        transform:translateY(110vh);
-        opacity:0;
-    }
-}
-
-.container{
-    text-align:center;
-    z-index:2;
-}
-
-.envelope{
-    position:relative;
-    width:280px;
-    height:190px;
-    background:#fff;
-    border-radius:12px;
-    cursor:pointer;
-    box-shadow:0 18px 35px rgba(0,0,0,0.3);
-    overflow:hidden;
-}
-
-.flap{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:#ff5e78;
-    clip-path: polygon(0 0,100% 0,50% 55%);
-    transform-origin:top;
-    transition:0.8s;
-}
-
-.letter{
-    position:absolute;
-    bottom:-100%;
-    width:100%;
-    height:100%;
-    background:#fff;
-    transition:1s;
-    padding:15px;
-    box-sizing:border-box;
-    text-align:center;
-}
-
-.rose{
-    font-size:40px;
-    margin:2px;
-    display:inline-block;
-    animation: pop 0.8s ease forwards;
-}
-
-@keyframes pop{
-    from{transform:scale(0); opacity:0;}
-    to{transform:scale(1); opacity:1;}
-}
-
-.text{
-    color:#e91e63;
-    font-size:15px;
-    min-height:100px;
-}
-
-.open .flap{
-    transform:rotateX(180deg);
-}
-
-.open .letter{
-    bottom:0;
+@keyframes fall {
+  to {
+    transform: translateY(100vh);
+    opacity: 0;
+  }
 }
 </style>
 </head>
 
 <body>
 
-<!-- Soft romantic music -->
-<audio id="music" loop>
-    <source src="https://cdn.pixabay.com/audio/2022/02/23/audio_4f8c07b5e5.mp3" type="audio/mpeg">
-</audio>
+<div class="envelope" onclick="openEnvelope()"></div>
 
-<div class="container">
-    <div class="envelope" onclick="openEnvelope()">
-        <div class="flap"></div>
-        <div class="letter">
-            <div id="roses"></div>
-            <div class="text" id="typing"></div>
-        </div>
-    </div>
-    <p style="margin-top:15px;color:white;">Tap the envelope 💌</p>
+<div class="message" id="msg">
+  <div class="rose">🌹🌹🌹</div>
+  <p id="typing"></p>
 </div>
 
+<audio id="music" loop>
+  <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_1b6b3f7a62.mp3?filename=romantic-piano-112191.mp3" type="audio/mpeg">
+</audio>
+
 <script>
-const message = [
-    "Hey you 💕",
-    "Some people make the world brighter",
-    "just by being in it ✨",
-    "You are one of them 🌸",
-    "This rose is for you 🌹",
-    "Happy Valentine’s Day ❤️"
-];
-
-let line = 0;
-let char = 0;
-
-function typeText(){
-    if(line < message.length){
-        if(char < message[line].length){
-            document.getElementById("typing").innerHTML += message[line].charAt(char);
-            char++;
-            setTimeout(typeText, 50);
-        } else {
-            document.getElementById("typing").innerHTML += "<br>";
-            char = 0;
-            line++;
-            setTimeout(typeText, 500);
-        }
-    }
+function openEnvelope() {
+  document.querySelector('.envelope').style.display = 'none';
+  document.getElementById('msg').style.display = 'block';
+  document.getElementById('music').play();
+  typeEffect();
 }
 
-function openEnvelope(){
-    document.querySelector('.envelope').classList.add('open');
-    document.getElementById("music").play();
-    typeText();
-    popRoses();
+// Typing effect
+const text = "Hey You 💕\n\nEvery rose reminds me of you 🌹\nYou make my world softer, warmer & brighter.\n\nHappy Valentine’s Day ❤️";
+let i = 0;
+
+function typeEffect() {
+  if (i < text.length) {
+    document.getElementById("typing").innerHTML +=
+      text.charAt(i) === "\n" ? "<br>" : text.charAt(i);
+    i++;
+    setTimeout(typeEffect, 60);
+  }
 }
 
-/* Falling hearts */
+// Falling hearts
 setInterval(() => {
-    const heart = document.createElement("div");
-    heart.classList.add("heart");
-    heart.innerHTML = "❤";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.animationDuration = (2 + Math.random() * 3) + "s";
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 5000);
+  const heart = document.createElement("div");
+  heart.innerHTML = "💖";
+  heart.style.position = "fixed";
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.top = "-10px";
+  heart.style.fontSize = "20px";
+  heart.style.animation = "fall 5s linear";
+  document.body.appendChild(heart);
+  setTimeout(() => heart.remove(), 5000);
 }, 300);
 
-/* Multiple roses popping */
-function popRoses(){
-    const roseBox = document.getElementById("roses");
-    for(let i=0;i<6;i++){
-        const rose = document.createElement("span");
-        rose.classList.add("rose");
-        rose.innerHTML = "🌹";
-        roseBox.appendChild(rose);
-    }
-}
+// Roses popping
+setInterval(() => {
+  const rose = document.createElement("div");
+  rose.innerHTML = "🌹";
+  rose.style.position = "fixed";
+  rose.style.left = Math.random() * 100 + "vw";
+  rose.style.top = Math.random() * 100 + "vh";
+  rose.style.fontSize = "30px";
+  document.body.appendChild(rose);
+  setTimeout(() => rose.remove(), 2000);
+}, 900);
 </script>
 
 </body>
 </html>
+
